<resources>
    <string name="app_name">Shome</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="temp">Temp</string>
    <string name="light">Light</string>
    <string name="music">Music</string>
    <string name="on_off">on/off</string>
    <string name="kitchen">Kitchen</string>
    <string name="bed_room">Bed room</string>
    <string name="on">ON</string>
    <string name="living_room">Living room</string>
    <string name="your_voice">Your voice</string>
</resources>
