<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPrimary"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:hint="@string/your_voice"
        android:textColorHint="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/et4">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            >
            <ImageView
                android:id="@+id/imageLed1"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/ico_light_off"
                tools:layout_editor_absoluteX="189dp"
                tools:layout_editor_absoluteY="132dp" />
            <TextView
                android:id="@+id/livingroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/living_room"
                android:layout_toEndOf="@+id/imageLed1"
                android:layout_alignBaseline="@+id/switch1"

                />
            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/livingroom"
                android:layout_alignParentTop="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:text="@string/on_off"
                android:textColor="@color/white"

               />
            <ImageView
                android:id="@+id/imageLed2"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="92dp"
                android:src="@drawable/ico_light_off"
                tools:layout_editor_absoluteX="189dp"
                tools:layout_editor_absoluteY="132dp" />
            <TextView
                android:id="@+id/bedroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/bed_room"
                android:layout_toEndOf="@+id/imageLed2"
                android:layout_alignBaseline="@+id/switch2"/>
            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/switch1"
                android:layout_marginTop="130dp"
                android:text="@string/on_off"
                android:textColor="@color/white"/>
            <ImageView
                android:id="@+id/imageLed3"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="184dp"
                android:src="@drawable/ico_light_off"
                tools:layout_editor_absoluteX="189dp"
                tools:layout_editor_absoluteY="132dp" />

            <TextView
                android:id="@+id/kitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/kitchen"
                android:layout_toEndOf="@+id/imageLed3"
                android:layout_alignBaseline="@+id/switch3"/>
            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/switch1"
                android:layout_marginTop="223dp"
                android:textColor="@color/white"
                android:text="@string/on_off"/>
        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/buttonMic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_background" />

    </RelativeLayout>
</RelativeLayout>